11-security-devsecops/07-kyverno-gatekeeper-admission-policies/policies/gatekeeper/templates/k8spspreadonlyrootfilesystem.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spspreadonlyrootfilesystem
  annotations:
    description: Requires containers to have a read-only root filesystem.
spec:
  crd:
    spec:
      names:
        kind: K8sPSPReadOnlyRootFilesystem
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspreadonlyrootfilesystem

        violation[{"msg": msg, "details": {}}] {
            c := input_containers[_]
            not c.securityContext.readOnlyRootFilesystem == true
            msg := sprintf("Container '%v' must have a read-only root filesystem (securityContext.readOnlyRootFilesystem=true).", [c.name])
        }

        input_containers[c] {
            c := input.review.object.spec.containers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.initContainers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.ephemeralContainers[_]
        }
