11-security-devsecops/07-kyverno-gatekeeper-admission-policies/policies/gatekeeper/templates/k8spsprunasnonroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsprunasnonroot
  annotations:
    description: Requires containers to run as a non-root user.
spec:
  crd:
    spec:
      names:
        kind: K8sPSPRunAsNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsprunasnonroot

        violation[{"msg": msg, "details": {}}] {
            c := input_containers[_]
            not pod_non_root(c)
            msg := sprintf("Container '%v' must not run as root. Set securityContext.runAsNonRoot to true.", [c.name])
        }

        pod_non_root(c) {
            c.securityContext.runAsNonRoot == true
        }
        pod_non_root(c) {
            not c.securityContext.runAsNonRoot == false
            input.review.object.spec.securityContext.runAsNonRoot == true
        }

        input_containers[c] {
            c := input.review.object.spec.containers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.initContainers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.ephemeralContainers[_]
        }
